[package]
name = "actix-request-reply-cache"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple request/reply cache middleware for Actix Web with Redis backend"
repository = "https://github.com/densumesh/actix-request-reply-cache"

[dependencies]
actix-web = "4"
redis = { version = "0.30", features = ["tokio-comp"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
log = "0.4.27"
tokio = "1.44.2"

[dev-dependencies]
actix-rt = "2.8.0"
async-trait = "0.1.73"
