[package]
name = "actix-request-reply-cache"
version = "0.1.7"
edition = "2021"
license = "MIT"
description = "A simple request/reply cache middleware for Actix Web with Redis backend"
repository = "https://github.com/densumesh/actix-request-reply-cache"

[dependencies]
actix-web = "4.9"
redis = { version = "0.30", features = ["tokio-comp"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.0"
sha2 = "0.10"
hex = "0.4"
log = "0.4.27"
pin-project-lite = "0.2.16"
futures-util = "0.3.31"
serde_json = "1.0.140"

[dev-dependencies]
actix-rt = "2.8.0"
async-trait = "0.1.73"
